; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_util.c_load_png_texture.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_util.c_load_png_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"load_png_texture %s failed, error %u: %s\0A\00", align 1
@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@GL_RGBA = common dso_local global i32 0, align 4
@GL_UNSIGNED_BYTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @load_png_texture(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @lodepng_decode32_file(i8** %4, i32* %5, i32* %6, i8* %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @stderr, align 4
  %13 = load i8*, i8** %2, align 8
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i8* @lodepng_error_text(i32 %15)
  %17 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %13, i32 %14, i8* %16)
  %18 = call i32 @exit(i32 1) #3
  unreachable

19:                                               ; preds = %1
  %20 = load i8*, i8** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @flip_image_vertical(i8* %20, i32 %21, i32 %22)
  %24 = load i32, i32* @GL_TEXTURE_2D, align 4
  %25 = load i32, i32* @GL_RGBA, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @GL_RGBA, align 4
  %29 = load i32, i32* @GL_UNSIGNED_BYTE, align 4
  %30 = load i8*, i8** %4, align 8
  %31 = call i32 @glTexImage2D(i32 %24, i32 0, i32 %25, i32 %26, i32 %27, i32 0, i32 %28, i32 %29, i8* %30)
  %32 = load i8*, i8** %4, align 8
  %33 = call i32 @free(i8* %32)
  ret void
}

declare dso_local i32 @lodepng_decode32_file(i8**, i32*, i32*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i32, i8*) #1

declare dso_local i8* @lodepng_error_text(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @flip_image_vertical(i8*, i32, i32) #1

declare dso_local i32 @glTexImage2D(i32, i32, i32, i32, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
